in class example

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Home | Navigation Example</title>
+		<title>Bringing Plants to Life | Gardening 101</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="styles.css" rel="stylesheet">
@@ -9,20 +9,31 @@
 	<body>
 		<a href="#mainContent" class="skip">Skip to main content</a>
 		<header>
-			<p>Navigation Example</p>
+			<p>Gardening 101</p>
 			<nav>
 				<ul>
 					<li><a href="index.html" aria-current="page">Home</a></li>
 					<li><a href="about.html">About</a></li>
 					<li><a href="products.html">Products</a></li>
-					<li><a href="services.html">Services</a></li>
 				</ul>
 			</nav>
 		</header>
 		<main id="mainContent">
-			<h1>This is the Index Page</h1>
-			<p>Mug acerbic grounds coffee caramelization that aroma caramelization so blue mountain eu black. Saucer, to go percolator barista, ristretto, mocha skinny ristretto mocha cup grounds. Caramelization, shop, americano as cup, percolator, skinny, at single shot brewed spoon whipped. Cappuccino strong est black caramelization doppio instant half and half.</p>
-			<p>Grinder, single shot, wings, in bar , froth decaffeinated americano chicory single shot. Ristretto, frappuccino iced affogato galão that doppio mocha. That, seasonal, chicory trifecta bar  single shot cultivar crema caffeine. That fair trade extra , french press fair trade aromatic arabica to go.</p>
+			<h1>Bringing Plants to Life</h1>
+			<p>Quack hammers eggplant is utters nails garden. Grapes nest pitch fork an plows maple syrup yearlings, quilt squeak doggies. Fertilizer buzz, purr meow cheep chinchillas squeak, seeds maple syrup worms, potato alligators grunt are at bees. Mallet herbs basil nest, i.
+			</p>
+			<h2>Life Stages</h2>
+			<ol class="stages">
+				<li><img src="assets/noun-calendar-4662366.svg" alt="April 1"></li>
+				<li><img src="assets/noun-fertilization-4662372.svg" alt="plant and fertilize"></li>
+				<li><img src="assets/noun-greenhouse-4662374.svg" alt="nurture in a greenhouse or protected environment"></li>
+				<li><img src="assets/noun-watering-4662387.svg" alt="water daily"></li>
+				<li><img src="assets/noun-lighting-4662377.svg"alt="provide direct sunlight"></li>
+				<li><img src="assets/noun-growth-4662376.svg" alt="watch the plants grow"></li>
+			</ol>
+			<p>Welding equipment pens quail. Oranges cucumbers rhubarb gourds watermelon. Petting zoo at carrots alligators quack. Prairie dogs raccoons robins rats. Utters are weathervane foal est. Baa potato donkey mouse, at gat.
+			</p>
+			<p>Grain bins woof. Fertilizer buzz, purr meow cheep chinchillas squeak, seeds maple syrup worms, potato alligators grunt are at bees. Oranges cucumbers rhubarb gourds watermelon. Turkey daisys eggs squeal, horses moonshine apples raising Mooo tractor plow. In eggplant, quonset is grain bins, grain trucks quonset pole shed, with fences gates zucchini carrots scra.</p>
 		</main>
 		<footer>
 
